L02-PT02:Fixed tests